# ANTIDOTE

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: update_version.py
.github/workflows/: ci.yml  deploy-sample-report.yaml  pre-commit.yaml
antidote/: __main__.py
antidote/commands/: inference.py  tools.py  train.py
antidote/models/antidote_main/: fingerprint.pb  keras_metadata.pb  saved_model.pb
antidote/models/antidote_mini/: fingerprint.pb  keras_metadata.pb  saved_model.pb
antidote/reports/: inference_report.py  training_report.py
antidote/utils/: antidote_builder.py  class3D_balancer.py  class3D_builder.py  class3D_filter_features.py  class3D_normalize.py  convert_cryosparc.py  get_metadata.py  get_recommended_threshold.py  handle_symmetry_expansion.py  plot_particle_overlaps.py  split_starfile.py  tensorflow_tools.py
examples/: example_training_config.yaml
examples/minimal_job_output/: antidote_summary_report.html  full_predictions.star  true_predictions.star
tests/: test_antidote_commands_e2e.py  test_class3D_job_construction.py
tests/data/minimal_job/: run.out  run_it000_data.star  run_it001_data.star  run_it003_model.star  run_it004_data.star  run_it004_model.star  run_it006_data.star  run_it006_model.star  run_it007_data.star  run_it010_data.star  run_it012_model.star  run_it014_model.star  run_it015_model.star  run_it017_model.star  run_it018_data.star  run_it019_data.star  run_it021_model.star  run_it022_data.star  run_it024_model.star  run_it025_data.star  run_it025_model.star
(+40 files in other folders)
